projects/compiler/test/typechecker/decorators/error_type_as_decorator.abra
type Foo {
  a: String
}

@Foo(b: "asdf")
func foo() {

}
